# dbt-student-repo

./: .gitignore  .user.yml  Snowflake.pbids  pyproject.toml
airbnb/: .user.yml  dbt_project.yml
airbnb/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
airbnb/models/fct/: fct_reviews.sql
airbnb/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
